force-app/main/default/objects/CLQ_SUTQ_Exemption__c/CLQ_SUTQ_Exemption__c.object-meta.xml
<CustomObject>
    <description>This object is used to store SUTQ exemption Yes/No Indicator and effective date in OCLQS</description>
    <label>SUTQ Exemption</label>
    <nameField>
        <label>SUTQ Exemption</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUTQ Exemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>