force-app/main/default/objects/CLQ_SUTQ_Exemption__c/fields/CLQ_Exempted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Exempted__c</fullName>
    <label>Exempted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>