force-app/main/default/objects/CLQ_SUTQ_Exemption__c/fields/CLQ_Manually_Exempted__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Manually_Exempted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field will capture if SUTQ was manually Exempted</description>
    <label>Manually Exempted</label>
    <type>Checkbox</type>
</CustomField>