force-app/main/default/objects/CLQ_SUTQ_Exemption__c/fields/CLQ_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipLabel>SUTQ Exemptions</relationshipLabel>
    <relationshipName>SUTQ_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>